--- a/package.json
+++ b/package.json
@@ -1,30 +1,31 @@
 {
-    "name": "phonegap-web-api",
-    "version": "0.0.1",
-    "private": true,
-    "author": "Dmitrii Suchkov <dsuchkov@applicationcraft.com>",
-    "bin": {
-    },
-    "scripts": {
-        "start": "node bin/api"
-    },
-    "dependencies": {
-        "express": "~3.4.6",
-        "lodash": "~2.2.1",
-        "optimist": "~0.6.0",
-        "mongodb": "~1.3.19",
-        "domain": "~0.1.5",
-        "log4js": "~0.6.10",
-        "q": "~1.0.1"
-    },
-    "devDependencies": {
-        "grunt-contrib-jshint": "~0.6.4",
-        "grunt": "~0.4.1",
-        "chai": "~1.8.1",
-        "sinon": "~1.7.3",
-        "sandboxed-module": "~0.3.0",
-        "grunt-simple-mocha": "~0.4.0",
-        "sinon-chai": "~2.4.0",
-        "grunt-mocha-cov": "0.0.7"
-    }
+  "name": "phonegap-web-api",
+  "version": "0.0.1",
+  "private": true,
+  "author": "Dmitrii Suchkov <dsuchkov@applicationcraft.com>",
+  "bin": {},
+  "scripts": {
+    "start": "node bin/api"
+  },
+  "dependencies": {
+    "express": "~3.4.6",
+    "lodash": "~2.2.1",
+    "optimist": "~0.6.0",
+    "mongodb": "~1.3.23",
+    "log4js": "~0.6.10",
+    "q": "~1.0.1",
+    "phonegap-build-api": "~0.3.3",
+    "node-uuid": "~1.4.1",
+    "amqp": "~0.2.0"
+  },
+  "devDependencies": {
+    "grunt-contrib-jshint": "~0.6.4",
+    "grunt": "~0.4.1",
+    "chai": "~1.8.1",
+    "sinon": "~1.7.3",
+    "sandboxed-module": "~0.3.0",
+    "grunt-simple-mocha": "~0.4.0",
+    "sinon-chai": "~2.4.0",
+    "grunt-mocha-cov": "0.0.7"
+  }
 }
