issue #codio-12556. add ssl support.

--- a/config.example.json
+++ b/config.example.json
@@ -26,7 +26,8 @@
             "autoDelete" : false,
             "durable": true,
             "type": "direct"
-        }
+        },
+        "ssl": false
     },
 
     "database": {
